# D-JAI

./: .gitignore  Italian Music.pls  README.md  chatbot.py  config.py  djai.code-workspace  get_music.py  main.py  mpg123.py  music_recs.py  playlist.pls  playlist.txt  playlist2.pls  playlist2.txt  pyproject.toml  tests.py  ui.py
chatbot_functions/: all.py  test.py
db/: chroma.sqlite3
scripts/: musicbrainz_script.py  musicbrainz_wikipedia_script.py  uiterm.py
