[tool.poetry]
name = "djai"
version = "0.1.0"
description = "manage your music with ai"
authors = ["Andres <andresf40y0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
ansiwrap = "0.8.4"
anyio = "4.0.0"
asttokens = "2.4.0"
async-timeout = "4.0.3"
attrs = "23.1.0"
backcall = "0.2.0"
backoff = "2.2.1"
bcrypt = "4.0.1"
beautifulsoup4 = "4.12.2"
brotli = "1.1.0"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
chroma-hnswlib = "0.7.3"
chromadb = "0.4.10"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
comm = "0.1.4"
coverage = "5.5"
debugpy = "1.8.0"
decorator = "4.4.2"
deprecation = "2.1.0"
downloader-cli = "0.3.3"
entrypoints = "0.4"
exceptiongroup = "1.1.3"
executing = "1.2.0"
eyed3 = "0.9.7"
fastapi = "0.99.1"
fastjsonschema = "2.18.0"
ffmpeg-python = "0.2.0"
filelock = "3.12.4"
filetype = "1.2.0"
find-libpython = "0.3.0"
flatbuffers = "23.5.26"
frozenlist = "1.4.0"
fsspec = "2023.9.0"
future = "0.18.3"
h11 = "0.14.0"
httpcore = "0.18.0"
httptools = "0.6.0"
httpx = "0.25.0"
huggingface-hub = "0.16.4"
humanfriendly = "10.0"
idna = "3.4"
imageio = "2.31.3"
imageio-ffmpeg = "0.4.9"
importlib-resources = "6.0.1"
ipykernel = "6.25.2"
ipython = "8.15.0"
itunespy = "1.6.0"
jedi = "0.19.0"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
jupyter-client = "8.3.1"
jupyter-core = "5.3.1"
markdown-it-py = "3.0.0"
matplotlib-inline = "0.1.6"
mdurl = "0.1.2"
monotonic = "1.6"
moviepy = "1.0.3"
mpmath = "1.3.0"
multidict = "6.0.4"
musicbrainzngs = "0.7.1"
mutagen = "1.47.0"
nbclient = "0.8.0"
nbformat = "5.9.2"
nest-asyncio = "1.5.7"
numpy = "1.25.2"
onnxruntime = "1.15.1"
openai = "0.28.0"
overrides = "7.4.0"
packaging = "23.1"
pandas = "2.1.0"
papermill = "2.4.0"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "10.0.0"
platformdirs = "3.10.0"
posthog = "3.0.2"
proglog = "0.1.10"
prompt-toolkit = "3.0.39"
protobuf = "4.24.3"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pulsar-client = "3.3.0"
pure-eval = "0.2.2"
pycountry = "22.3.5"
pycryptodomex = "3.18.0"
pydantic = "1.10.12"
pydes = "2.0.1"
pygments = "2.16.1"
pypika = "0.48.9"
pyqt5 = "5.15.9"
pyqt5-qt5 = "5.15.2"
pyqt5-sip = "12.12.2"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytube = "15.0.0"
pytz = "2023.3.post1"
pyxdg = "0.28"
pyyaml = "6.0.1"
pyzmq = "25.1.1"
redis = "5.0.0"
referencing = "0.30.2"
requests = "2.31.0"
rich = "13.5.2"
rpds-py = "0.10.2"
simber = "0.2.6"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
spotipy = "2.23.0"
stack-data = "0.6.2"
starlette = "0.27.0"
sympy = "1.12"
tenacity = "8.2.3"
textwrap3 = "0.9.2"
tokenizers = "0.14.0"
toml = "0.10.2"
tornado = "6.3.3"
tqdm = "4.66.1"
traitlets = "5.9.0"
typing-extensions = "4.7.1"
tzdata = "2023.3"
unidecode = "1.3.6"
urllib3 = "2.0.4"
uvicorn = "0.23.2"
uvloop = "0.17.0"
watchfiles = "0.20.0"
wcwidth = "0.2.6"
websockets = "11.0.3"
yarl = "1.9.2"
youtube-search-python = "1.6.6"
yt-dlp = "2023.7.6"
ytmdl = "2023.7.27"
ytmusicapi = "1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
